IntroGrpc.Kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: grpc-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      restartPolicy: Always
      volumes:
        - name: certificate
          secret:
            # kubectl create -n default secret generic my-certificate-pfx --from-file your_host.pfx
            secretName: my-certificate-pfx
      containers:
        - name: grpc-server
          resources:
            limits:
              memory: "250Mi"
              cpu: "0.1"
          image: YOUR_IMAGE_NAME:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: "/etc/ssl/private"
              name: certificate
              readOnly: true
      nodeSelector:
        beta.kubernetes.io/os: linux
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-server
  labels:
    name: grpc-server
spec:
  type: ClusterIP
  selector:
    app: grpc-server
  ports:
    - port: 443
